[package]
name = "rebox"
version = "0.1.0"
edition = "2021"
authors = [
    "Cavey Cool <caveycool@gmail.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cavemanloverboy/rebox"
description = "An efficient boxing library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]